--- a/sass/_overrides.scss
+++ b/sass/_overrides.scss
@@ -108,6 +108,10 @@ ol, ul {
     max-width: unset;
   }
 
+  form {
+    position: relative;
+  }
+
   .form-group {
     display: block;
   }
@@ -115,6 +119,6 @@ ol, ul {
   .submit {
     position: absolute;
     right: 0px;
-    top: 1em;
+    top: 0px;
   }
 }
